# deriva-ml-cifar-example

./: CIFAR10.md  CLAUDE.md  Experiments.md  README.md  pyproject.toml  tacit-knowledge.md
docs/: index.md
docs/configuration/: experiments.md  groups.md  notebooks.md  overview.md
docs/design/dataset/: README.md  cifar10-input-datasets.md  cifar10-source-archive.md
docs/design/experiment/: README.md  cifar10-default.md  cifar10-extended-full.md  cifar10-extended.md  cifar10-quick-full.md  cifar10-quick.md  cifar10-small-default.md  cifar10-small-large.md  cifar10-test-only.md
docs/design/feature/: README.md  image-classification.md
docs/design/model/: README.md  cifar10-2layer-cnn.md
docs/getting-started/: creating-models.md  creating-notebooks.md  quick-start.md
docs/reference/: cifar10-example.md  coding-guidelines.md
docs/superpowers/plans/: 2026-05-13-e2e-platform-test.md  2026-05-27-runner-cleanup.md  2026-06-25-two-execution-ingest.md
docs/superpowers/specs/: 2026-06-25-two-execution-ingest-design.md
docs/test-plans/: 2026-05-20-e2e-multipersona.md  e2e-bootstrap.md  e2e-evaluator.md  e2e-orchestrator.md
docs/workflow/: experiments.md  git.md
notebooks/: roc_analysis.ipynb
scripts/: upload_assets.py
src/configs/: __init__.py  base.py  cifar10_cnn.py  datasets.py  experiments.py  roc_analysis.py
src/models/: cifar10_cnn.py
src/scripts/: _cifar10_assets.py  _cifar10_datasets.py  _cifar10_register.py  _cifar10_schema.py  _cifar10_source.py  _cifar10_upload.py  analyst_join.py  load_cifar10.py
tests/: test_analyst_join.py  test_cifar10_assets.py  test_cifar10_cnn_loaders.py  test_cifar10_datasets.py  test_cifar10_register.py  test_cifar10_schema.py  test_cifar10_source.py  test_cifar10_upload.py  test_find_source_dataset.py  test_lineage_connected.py  test_load_cifar10_retry.py  test_load_cifar10_split_no_leakage.py  test_runner_bag_dispatch.py  test_runner_seed.py
